--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native": "^0.67.7"
   },
   "private": true
 }
