setting eas.json for ios

--- a/app.json
+++ b/app.json
@@ -17,15 +17,16 @@
 		},
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
-			"buildNumber": "1",
+			"buildNumber": "1.0.0",
 			"supportsTablet": true
 		},
 		"android": {
-			"versionCode": "1.0.0",
+			"versionCode": "1",
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/adaptive-icon.png",
 				"backgroundColor": "#FFFFFF"
-			}
+			},
+			"package": "com.conweb.myrecipebook"
 		},
 		"web": {
 			"favicon": "./assets/favicon.png"
